# bevy-remote-devtools

./: .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
.cargo/: config.toml
.github/workflows/: tauri-release.yml  tauri-test-on-pr.yml
plugin/: Cargo.toml
plugin/examples/: 3d.rs  3d_scene.rs
plugin/src/: api.rs  assets.rs  graph.rs  lib.rs  render_graph.rs  serialization.rs  sync.rs  tracing.rs  tracing_tracking.rs
plugin/src/tracing_tracking/: chrome.rs  events.rs
src/: api.tsx  app.tsx  template.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: discovery.rs  main.rs
src/components/: ClientSelect.tsx  FrameDiagnostic.tsx  Router.tsx
src/components/AssetViewer/: index.tsx  renderer.ts
src/components/GraphViewer/: component.tsx  index.tsx
src/components/GraphViewer/autoarrange/: auto-arrange.js  board.js  cache.js  index.js
src/views/: Assets.tsx  Events.tsx  RenderGraph.tsx  SystemProfiler.tsx
src/views/World/: Component.tsx  index.tsx  serialization.ts
