[package]
name = "bevy-remote-devtools-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "7356f1586d74039f840bcfcf24af3e21c23e3c18", features = ["trace","bevy_render", "bevy_pbr"] }
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing-serde = "0.1"
tracing-subscriber = "0.3.1"
rweb = { version = "0.15", features = ["openapi","chrono"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
tokio = "1"
itoa = "1.0"
libmdns = "0.6"

[dev-dependencies]
env_logger = "0.8.4"