[package]
name = "bevy-remote-devtools-plugin"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/reneeichhorn/bevy-remote-devtools.git"
description = "A toolset that allows you to debug / view any bevy application with a tauri based UI. This crate is only the plugin part."

[lib]
crate-type=["dylib"]

[dependencies]
bevy = { version = "0.7", features = ["trace","bevy_render", "bevy_pbr", "dynamic"] }
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing-serde = "0.1"
tracing-subscriber = "0.3.1"
rweb = { version = "0.15", features = ["openapi","chrono"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
tokio = "1"
itoa = "1.0"
libmdns = "0.6"

[dev-dependencies]
env_logger = "0.8.4"

[patch.crates-io]
hyper = { git = "https://github.com/reneeichhorn/hyper.git" }